--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background-color: slategrey;
-  color: white;
+  background-color: #c6b792;
+  color: black;
 }
 
 h1 {
   font-family: verdana, arial, sans-serif;
-  color: blue;
+  color: #900404;
 }
 
 button {
@@ -24,35 +24,41 @@ button {
 }
 
 #button1 {
-  background: lightgreen;
+  background: #980000;
 }
 
 #button1:active, #button1.lit{
-  background:green;
+  background:#fe0000;
 }
 
 #button2 {
-  background: lightblue;
+  background: #979801;
 }
 
 #button2:active, #button2.lit{
-  background:blue;
+  background:#fdfe02;
 }
 
 #button3{
-  background: pink;
+  background: #07b200;
 }
 
 #button3:active, #button3.lit{
-  background:red;
+  background:#0bff01;
 }
 
 #button4{
-  background: lightyellow;
+  background: #0015b1;
 }
 
 #button4:active, #button4.lit{
-  background: yellow;
+  background: #011efe;
+}
+
+#attemptsDisplay{
+  position: fixed;
+  top: 20px;
+  right: 20px;
 }
 
 .hidden{
